--- a/inst/pkgdown/footer.html
+++ b/inst/pkgdown/footer.html
@@ -59,10 +59,10 @@ Developed by the <a href="https://www.qmul.ac.uk/whri/emr/">Centre for Experimen
 <a href="https://www.qmul.ac.uk/c4tb/"><j class="fa fa-university fa-2x  icon-grey bladge" aria-hidden="false" style="color:#ff3333"></j></a>
 <span style="margin-left:1rem"></span>
 
-<a href="mailto:k.goldmann@qmul.ac.uk" class="fas fa-envelope fa-2x" style="color:#ff3333">
+<a href="mailto:myles.lewis@qmul.ac.uk" class="fas fa-envelope fa-2x" style="color:#ff3333">
 </a><span style="margin-left:1rem"></span>
 
-<a href="https://github.com/KatrionaGoldmann"><i class="fab fa-github fa-2x" style="color:#ff3333"></i></a>
+<a href="https://github.com/myles-lewis"><i class="fab fa-github fa-2x" style="color:#ff3333"></i></a>
 <span style="margin-left:1rem"></span>
 
 <a href="https://twitter.com/EMR_QMUL"><i class="fab fa-twitter fa-2x" style="color:#ff3333"></i></a>
